--- a/app/index.jade
+++ b/app/index.jade
@@ -12,13 +12,16 @@ html.no-js
 
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    title
+    title Music and Audio Computing Lab - Home
+
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width')
     // Place favicon.ico and apple-touch-icon.png in the root directory
     // build:css(.tmp) styles/main.css
     link(rel='stylesheet', href='styles/main.css')
     // endbuild
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css')
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css')
   body(ng-app='maclabWebApp')
     //if lt IE 7
       p.browsehappy
@@ -31,9 +34,13 @@ html.no-js
       script(src='bower_components/es5-shim/es5-shim.js')
       script(src='bower_components/json3/lib/json3.min.js')
     // Add your site or application content here
+    div(ng-include="'/views/nav.html'")
+    div(ng-include="'/views/logo.html'")
     .container(ng-view='')
+    div(ng-include="'/views/footer.html'")
+
     // Google Analytics: change UA-XXXXX-X to be your site's ID
-    script
+    script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
