--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,22 +1,58 @@
+
 body {
-    background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
+	margin-top: 50px; /* 50px is the height of the navbar - change this if the navbarn height changes */
+  background-image:url('/images/wallpaper.png');
 }
 
-.hero-unit {
-    margin: 50px auto 0 auto;
-    width: 300px;
-    font-size: 18px;
-    font-weight: 200;
-    line-height: 30px;
-    background-color: #eee;
-    border-radius: 6px;
-    padding: 60px;
+.full-width-image-1 {
+	background: url(/images/bg1.jpg) no-repeat center center;
+	background-size: cover;
+	text-align: center;
+	padding: 100px 0;
 }
 
-.hero-unit h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+.full-width-image-2 {
+	background: url(http://lorempixel.com/g/1920/450/) no-repeat center center;
+	background-size: cover;
+	text-align: center;
+	height: 450px;
+}
+
+.logo-wrapper {
+	display: inline-block;
+}
+
+.section {
+	padding-top: 75px;
+	padding-bottom: 75px;
+}
+
+.section-heading {
+	font-size: 4em;
+	margin: 30px 0;
+}
+
+.section-lead {
+	margin: 30px 0;
+}
+
+.section-paragraph {
+	margin: 30px 0;
+}
+
+footer {
+	margin: 50px 0;
+}
+
+@media (max-width: 768px) {
+
+  .section-heading {
+  	font-size: 2em;
+  }
+
+  .section {
+	 padding-top: 25px;
+	 padding-bottom: 25px;
+  }
+
 }
