--- a/app/index.jade
+++ b/app/index.jade
@@ -22,6 +22,7 @@ html.no-js
     // endbuild
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css')
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css')
+    link(href='http://fonts.googleapis.com/css?family=Allerta', rel='stylesheet', type='text/css')
   body(ng-app='maclabWebApp')
     //if lt IE 7
       p.browsehappy
