--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,14 +2,16 @@
 body {
 	margin-top: 50px; /* 50px is the height of the navbar - change this if the navbarn height changes */
   background-image:url('/images/wallpaper.png');
+  line-height: 2.5em;
+  letter-spacing: 0.07em;
+  text-align: justify;
 }
 
 .full-width-image-1 {
 	background: url(/images/bg1.jpg) no-repeat center center;
 	background-size: cover;
 	text-align: center;
-	padding: 100px 0;
-  height: 400px;
+  height: 300px;
 }
 
 .full-width-image-2 {
@@ -56,4 +58,44 @@ footer {
 	 padding-bottom: 25px;
   }
 
+}
+
+body .container .content{
+  width:80%;
+  margin:0 auto;
+}
+
+body h1{
+  font: 400 50px/1.2 'Allerta', sans-serif;
+  text-shadow: 3px 3px 3px #fff;
+}
+
+.macUnit{
+  width: 100%;
+  min-width:750px;
+  height: 80%;
+  min-height:200px;
+  background: #fff;
+  border-radius: 10px;
+  padding:10px 25px;
+  margin:10px 0;
+}
+
+.macUnit img{
+  float:left;
+  margin-right: 25px;
+}
+
+b{
+  font-size:17px;
+  line-height: 1.7em;
+}
+body .footer{
+  width:100%;
+  height: 100%;
+  /*background: #fff;*/
+  padding:10px;
+  margin-top: 5px;
+  text-align: center;
+  font-size:12px;
 }
