Refactor legacy codes

--- a/app/views/database.jade
+++ b/app/views/database.jade
@@ -1,20 +1,12 @@
-br
-.secondary-navigation
-  a(href='lj/index.html') LJ project
-  a(href='cal10k_mac/index.html') CAL10k&UnderBar;mac
-  .clearer
-    span
 .container
-  .content
-    a(href='../lj/index.html') Livejournal project
-    br
-    a(href='../cal10k_mac/index.html') CAL10k&UnderBar;mac
-  .footer
-    .left
-      | &copy; 2011
-      a(href='index.html') MAC Lab
-    .right
-      a(href='http://templates.arcsin.se/') Website template
-      | by
-      a(href='http://arcsin.se/') Arcsin
-    .clearer &NonBreakingSpace;
+  br
+  div.well
+    ul.list-inline
+      li
+        a.btn.btn-success(href='lj/index.html') LJ project
+      li
+        a.btn.btn-success(href='cal10k_mac/index.html') CAL10k&UnderBar;mac
+      li
+        a.btn.btn-success(href='../lj/index.html') Livejournal project
+      li
+        a.btn.btn-success(href='../cal10k_mac/index.html') CAL10k&UnderBar;mac
