--- a/app/views/publication.jade
+++ b/app/views/publication.jade
@@ -2,8 +2,8 @@
   .content
     h1
       | Book
-    ul
-      li
+    ul.list-group
+      li.list-group-item
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -18,7 +18,7 @@
         | &rpar;
         br
         br
-      cite
+      li.list-group-item
         | This book provides a comprehensive introduction of the research on modeling
         | human&apos;s emotion perception of music&comma; a research topic that emerges in the face of
         | the ever-increasing amount of digital music content&period; Automatic recognition of the
@@ -32,11 +32,10 @@
         | This book provides the detail of the methods that have been developed to address
         | these issues&period;
         br
-        br
     h1
       | Journal Papers
-    ul
-      li
+    ul.list-group
+      li.list-group-item
         | C&period;-T&period; Lee&comma;
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
@@ -56,7 +55,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li
+      li.list-group-item
         | K&period;-S&period; Lin&comma; A&period; Lee&comma;
         b Y&period;-H&period; Yang
         | &comma; C&period;-T&period; Lee&comma; and H&period;-H&period; Chen&comma;
@@ -73,7 +72,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li
+      li.list-group-item
         | Y&period;-C&period; Lin&comma;
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
@@ -95,7 +94,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -116,7 +115,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -139,7 +138,7 @@
         | &rsqb;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -161,7 +160,7 @@
         | &rsqb;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; W&period;-H&period; Hsu&comma; and H&period;-H&period; Chen&comma;
         br
@@ -182,7 +181,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         | Y&period;-F&period; Su&comma;
         b Y&period;-H&period; Yang
         | &comma; M&period;-T&period; Lu&comma; and H&period;-H&period; Chen&comma;
@@ -203,7 +202,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; Y&period;-F&period; Su&comma; and H&period;-H&period; Chen&comma;
         br
@@ -230,7 +229,7 @@
         | &comma; include dataset&rsqb; &lpar;cited by 50&rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -248,8 +247,8 @@
     h1
       | Conference Papers
     h3 2012
-    ul
-      li
+    ul.list-group
+      li.list-group-item
         | J&period;-Y&period; Liu&comma; C&period;-C&period; Yeh&comma; Y&period;-C&period; Teng&comma; and Y&period;-H&period; Yang&comma;
         b &OpenCurlyDoubleQuote;Bilingual analysis of song lyrics and audio words
         | &comma;&rdquor;
@@ -261,7 +260,7 @@
             | &rpar;&comma; short paper&comma; 2012&period;
             br
             br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | and X&period; Hu
         br
@@ -278,7 +277,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li
+      li.list-group-item
         | C&period;-C&period; Yeh and Y&period;-H&period; Yang&comma;
         br
         | &quot;
@@ -296,7 +295,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; D&period; Bogdanov&comma; P&period; Herrera&comma; and M&period; Sordo&comma;
         br
@@ -313,8 +312,8 @@
         br
         br
     h3 2011
-    ul
-      li
+    ul.list-group
+      li.list-group-item
         | Y&period;-H&period; Kuo&comma; H&period;-T&period; Lin&comma; W&period;-H&period; Cheng&comma;
         b Y&period;-H&period; Yang
         | &comma; and W&period;-H&period; Hsu&comma;
@@ -335,7 +334,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li
+      li.list-group-item
         | K&period;-S&period; Lin&comma; A&period; Lee&comma;
         b Y&period;-H&period; Yang
         | &comma; C&period;-D&period; Lee&comma; and H&period;-H&period; Chen&comma;
@@ -355,7 +354,7 @@
         br
         | &lpar;paper&rpar;
         br
-      li
+      li.list-group-item
         | C&period;-D&period; Lee&comma;
         b Y&period;-H&period; Yang
         | &comma; and H&period;-H&period; Chen&comma;
@@ -379,8 +378,8 @@
         br
       br
     h3 2010
-    ul
-      li
+    ul.list-group
+      li.list-group-item
         | Y&period;-H&period; Kuo&comma; Y&period;-L&period; Wu&comma; K&period;-T&period; Chen&comma;
         b Y&period;-H&period; Yang
         | &comma; T&period;-H&period; Chiu&comma; and W&period;-H&period; Hsu&comma;
@@ -399,8 +398,8 @@
         br
       br
     h3 2009
-    ul
-      li
+    ul.list-group
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; A&period; Lee&comma; and H&period;-H&period; Chen&comma;
         br
@@ -422,7 +421,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         | M&period;-Y&period; Su&comma;
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
@@ -445,7 +444,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
         br
@@ -463,7 +462,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         | L&period;-C&period; Hsieh&comma; K&period;-T&period; Chen&comma;
         b Y&period;-H&period; Yang
         | &comma; and G&period;-L&period; Wu&comma;
@@ -483,7 +482,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -501,7 +500,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -522,7 +521,7 @@
         | &lsqb;project page&comma; include dataset&rsqb;
         br
         br
-      li
+      li.list-group-item
         | Y&period;-C&period; Lin&comma;
         b Y&period;-H&period; Yang
         | &comma; H&period;-H&period; Chen&comma; I-Bin Liao&comma; and Yeh-Chin Ho
@@ -544,7 +543,7 @@
         | &comma; include dataset&rsqb;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
         br
@@ -562,7 +561,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         | H&period;-T&period; Cheng&comma;
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
@@ -586,8 +585,8 @@
         br
         br
     h3 2008
-    ul
-      li
+    ul.list-group
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; P&period;-T&period; Wu&comma; C&period;-W&period; Lee&comma; K&period;-H&period; Lin&comma; W&period;-H&period; Hsu&comma; and H&period;-H&period; Chen&comma;
         br
@@ -614,7 +613,7 @@
         | &comma; include dataset&rsqb;
         br
         br
-      li
+      li.list-group-item
         | P&period;-T&period; Wu&comma;
         b Y&period;-H&period; Yang
         | &comma; K&period;-T&period; Chen&comma; W&period;-H&period; Hsu&comma; T&period;-H&period; Li&comma; and C&period;-J&period; Lee&comma;
@@ -633,7 +632,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; H&period;-T&period; Cheng&comma; and H&period;-H&period; Chen&comma;
         br
@@ -653,7 +652,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         | T&period;-L&period; Wu et al&comma;
         br
         | &quot;
@@ -671,7 +670,7 @@
         | &comma; demo&rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; H&period;-T&period; Cheng&comma; I&period;-B&period; Liao&comma; Yeh-Chin Ho&comma; and H&period;-H&period; Chen&comma;
         br
@@ -691,7 +690,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         | H&period;-T&period; Cheng&comma;
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; I&period;-B&period; Liao&comma; and H&period;-H&period; Chen&comma;
@@ -710,7 +709,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | and W&period;-H&period; Hsu&comma;
         br
@@ -729,8 +728,8 @@
         br
         br
     h3 2007
-    ul
-      li
+    ul.list-group
+      li.list-group-item
         | M&period;-F&period; Weng&comma; C&period;-K&period; Chen&comma;
         b Y&period;-H&period; Yang
         | &comma; R&period;-E&period; Fan&comma; Y&period;-T&period; Hsieh&comma; Y&period;-Y&period; Chunag&comma; W&period;-H&period; Hsu&comma; and C&period;-J&period; Lin&comma;
@@ -753,7 +752,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         | C&period;-C&period; Ma&comma;
         b Y&period;-H&period; Yang
         | &comma; and W&period; Hsu&comma;
@@ -774,7 +773,7 @@
         | &comma; include dataset&rsqb;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; Y&period;-F&period; Su&comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
         br
@@ -802,7 +801,7 @@
           | &rpar;&rsqb;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; Y&period;-F&period; Su&comma; and H&period;-H&period; Chen&comma;
         br
@@ -829,8 +828,8 @@
         br
         br
     h3 2006
-    ul
-      li
+    ul.list-group
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; C&period;-C Liu&comma; and H&period;-H&period; Chen&comma;
         br
@@ -854,7 +853,7 @@
           | &rsqb;
         br
         br
-      li
+      li.list-group-item
         | C&period;-C Liu&comma;
         b Y&period;-H&period; Yang
         | &comma; P&period;-H&period; Wu&comma; and H&period;-H&period; Chen&comma;
@@ -875,7 +874,7 @@
         | &rpar;
         br
         br
-      li
+      li.list-group-item
         b Y&period;-H&period; Yang
         | &comma; M&period;-T Lu&comma; and H&period;-H&period; Chen&comma;
         br
@@ -897,18 +896,8 @@
         br
         br
     hr
-    b Copyright Notice&colon;
-    br
-    | The documents on this page have been published by scholarly journals or conferences for the purpose of non-commercial dissemination of scientific work&period; These manuscripts are copyrighted by the authors and&sol;or the journals&sol;conferences in which they are published&period; You may copy a manuscript for scholarly&comma; non-commercial purposes&comma; provided that you agree with these terms&period;
-    br
-    br
-    br
-  .footer
-    .left
-      | &copy; 2011
-      a(href='index.html') MAC Lab
-    .right
-      a(href='http://templates.arcsin.se/') Website template
-      | by
-      a(href='http://arcsin.se/') Arcsin
-    .clearer &NonBreakingSpace;
+    div.well
+      b Copyright Notice&colon;
+      br
+      | The documents on this page have been published by scholarly journals or conferences for the purpose of non-commercial dissemination of scientific work&period; These manuscripts are copyrighted by the authors and&sol;or the journals&sol;conferences in which they are published&period; You may copy a manuscript for scholarly&comma; non-commercial purposes&comma; provided that you agree with these terms&period;
+
