--- a/views/database.html
+++ b/views/database.html
@@ -1,12 +1,11 @@
-<br/>
-<div class="secondary-navigation"><a href="lj/index.html">LJ project</a><a href="cal10k_mac/index.html">CAL10k&UnderBar;mac</a>
-  <div class="clearer"><span></span></div>
-</div>
-<div class="container">
-  <div class="content"><a href="../lj/index.html">Livejournal project</a><br/><a href="../cal10k_mac/index.html">CAL10k&UnderBar;mac</a></div>
-  <div class="footer">
-    <div class="left">&copy; 2011<a href="index.html">MAC Lab</a></div>
-    <div class="right"><a href="http://templates.arcsin.se/">Website template</a>by<a href="http://arcsin.se/">Arcsin</a></div>
-    <div class="clearer">&NonBreakingSpace;</div>
+
+<div class="container"><br/>
+  <div class="well">
+    <ul class="list-inline">
+      <li><a href="lj/index.html" class="btn btn-success">LJ project</a></li>
+      <li><a href="cal10k_mac/index.html" class="btn btn-success">CAL10k&UnderBar;mac</a></li>
+      <li><a href="../lj/index.html" class="btn btn-success">Livejournal project</a></li>
+      <li><a href="../cal10k_mac/index.html" class="btn btn-success">CAL10k&UnderBar;mac</a></li>
+    </ul>
   </div>
 </div>
