--- a/views/home.html
+++ b/views/home.html
@@ -5,46 +5,15 @@
   </h1>
 </div>
 <body>
-  <div class="container">
-    <div class="content"><br/>
-      <div class="well">
-        <h1>Introduction</h1>
-        <div class="content-separator"></div>The Music and Audio computing (MAC) Lab of the Academia Sinica in Taipei&comma; part of its Research Center for Information Technology Innovation&comma;
-        was founded in Sept&period; 2011 by Dr&period; Yi&comma;Hsuan Yang&period; The MAC Lab is dedicated to the development of multimedia systems that better understand what
-        we hear and perceive in sounds and apply this understanding to enhance our interaction with sounds&period; Our goal is to carry out highly original
-        and competitive research at the international level and transfer the technology to impact the daily life&period;
-        <div>&NonBreakingSpace;</div>Our current research interests include&comma; but are not limited to&colon; music emotion recognition&comma; automatic tagging&comma; music recommendation&comma; multi-pitch
-        estimation&comma; lyrics processing&comma; auditory scene analysis&comma; audio event detection&comma; singer&sol;speaker identification&comma; audio fingerprinting&comma; human affect
-        detection&comma; and user interface design for mobile devices&period;
-        <div>&NonBreakingSpace;</div>
-        <div>&NonBreakingSpace;</div>
-      </div>
-      <div class="well">
-        <h1>Recruitments</h1>&#32887;&#21209;&#21517;&#31281;&colon; &#23560;&#20219;&#30740;&#31350;&#21161;&#29702;<br/>&#24037;&#20316;&#20839;&#23481;&colon;<br/>&#24478;&#20107;&#27231;&#22120;&#23416;&#32722;&#12289;&#22810;&#23186;&#39636;&#36039;&#26009;&#34389;&#29702;&#12289;&#38899;&#27138;&#27298;&#32034;&#31561;&#30456;&#38364;&#31995;&#32113;&#33287;&#25033;&#29992;&#20043;&#30740;&#31350;<br/>&#25033;&#24501;&#36039;&#26684;&colon;<br/>
-        <li>1&period; &#22283;&#20839;&#22806;&#23416;&#22763;&#25110;&#30889;&#23416;&#27511;&#25110;&#22312;&#23416;</li>
-        <li>2&period; &#29087;Matlab&#25110;Java&#35486;&#35328;&#20339;</li>
-        <li>3&period; &#29087;&#27231;&#22120;&#23416;&#32722;&comma;&#27169;&#22411;&#36776;&#35672;&comma;&#25976;&#20301;&#20449;&#34399;&#34389;&#29702;&#20339;</li>
-        <li>4&period; &#20855;&#25976;&#23416;&#25110;&#38899;&#27138;&#23560;&#38263;&#20339;</li>
-        <div> &NonBreakingSpace;</div>&#24037;&#20316;&#24453;&#36935;&colon; &#20381;&#22283;&#31185;&#26371;&#35215;&#23450;&#65292;&#23416;&#22763;&#32026;&#23560;&#20219;&#21161;&#29702;&#26376;&#34218;&dollar;31&comma;520&#36215;&#65292;&#30889;&#22763;&#32026;&#23560;&#20219;&#21161;&#29702;&#26376;&#34218;&dollar;36&comma;050&#36215;&#65292;&#20139;&#21214;&#20581;&#20445;&#33287;&#24180;&#32066;&#29518;&#37329;&#12290;<br/>&#32879;&#32097;&#20154;&colon; &#26954;&#22869;&#36562;&#21338;&#22763;<br/>&#36899;&#32097;&#38651;&#35441;&colon; &#35531;&#29992;E-mail&#32879;&#32097;<br/>&#25033;&#24501;&#26041;&#24335;&colon; &#26044;&#20013;&#30740;&#38498;&#38754;&#35430;<br/>Email&colon; affige&commat;gmail&period;com<br/>
-        <div>&NonBreakingSpace;</div>
-        <div>&NonBreakingSpace;</div>
-        <div>&NonBreakingSpace;</div>
-        <div class="content-separator"></div>We cordially welcome applicants who are interested in one of the following projects&colon;<br/>
-        <div>&NonBreakingSpace;</div><b>&OpenCurlyDoubleQuote;Hidden Patterns in Everyday Music Listening&rdquor;</b><br/>Music listening is not a random activity&semi;
-        rather it depends on an interplay between some musical&comma; personal&comma; and situational factors&period;
-        Being in a sad mood&comma; some may listen to sad music&comma; while others prefer happy tunes&comma; for reasons&period;
-        Our enthusiasm for a specific type of music is influenced by our peers&period; We tend to use music as &OpenCurlyDoubleQuote;a reminder of valued past events&period;&rdquor;
-        Also our music listening is not randomly distributed in time&semi; it follows some bursty yet regular pattern&period;<br/><br/>This project aims at uncovering these hidden patterns so as to better understand human behavior and to create systems for music recommendation&period;<br/><br/><b>&OpenCurlyDoubleQuote;Musical Basis that Span Million Songs&rdquor;</b><br/>Given the overwhelmingly diversity of music content&comma;
-        this project aims at discovering core musical elements from mining a million number of songs and associated metadata available from social websites&period;
-        The goal is to decipher the language of music and provide a semantic description of music such as<br/><br/>&OpenCurlyDoubleQuote;This is a funky&comma; dance pop song that is arousing not tender&period;
-        It features male vocal&comma; synthesizer&comma; drum machine&comma; a nice male vocal solo&comma; and altered with effects&comma; strong vocals&period;
-        It is a song with a synthesized texture and that was recorded in studio that you might like listen to while at a party&period;
-        &rdquor;<br/><br/>
-        <div>&NonBreakingSpace;</div>We are also interested in the following research problems&colon;
-        blind source separation of polyphonic music&comma; natural language processing of blog articles and lyrics&comma; audio fingerprinting&comma; singer&sol;speaker identification&comma; and audio-visual analysis of multimedia content&period; Or you may bring your own ideas&period;<br/><br/>Qualification will be evaluated in terms of past research experience and the desire to excel in your career&period;
-        In the attachment of the application letter please include at least your resume and purpose of doing research here&period;
-        Shortlisted applicants would be invited for an on-site interview at Academia Sinica&period;
-      </div>
-    </div>
+  <div class="jumbotron"><font color="brown">Music and Audio Computing Lab</font>
+    <div class="content-separator"></div>The Music and Audio computing (MAC) Lab of the Academia Sinica in Taipei&comma; part of its Research Center for Information Technology Innovation&comma;
+    was founded in Sept&period; 2011 by Dr&period; Yi&comma;Hsuan Yang&period; The MAC Lab is dedicated to the development of multimedia systems that better understand what
+    we hear and perceive in sounds and apply this understanding to enhance our interaction with sounds&period; Our goal is to carry out highly original
+    and competitive research at the international level and transfer the technology to impact the daily life&period;
+    <div>&NonBreakingSpace;</div>Our current research interests include&comma; but are not limited to&colon; music emotion recognition&comma; automatic tagging&comma; music recommendation&comma; multi-pitch
+    estimation&comma; lyrics processing&comma; auditory scene analysis&comma; audio event detection&comma; singer&sol;speaker identification&comma; audio fingerprinting&comma; human affect
+    detection&comma; and user interface design for mobile devices&period;
+    <div>&NonBreakingSpace;</div>
+    <div>&NonBreakingSpace;</div>
   </div>
 </body>
