--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,14 +1,14 @@
 
 body {
 	margin-top: 50px; /* 50px is the height of the navbar - change this if the navbarn height changes */
-  background-image:url('/images/wallpaper.png');
+  background-image:url(../images/bg.jpg);
   line-height: 2.5em;
   letter-spacing: 0.07em;
   text-align: justify;
 }
 
 .full-width-image-1 {
-	background: url(/images/bg1.jpg) no-repeat center center;
+	background: url(../images/bg1.jpg) no-repeat center center;
 	background-size: cover;
 	text-align: center;
   height: 300px;
@@ -75,7 +75,7 @@ body h1{
   min-width:750px;
   height: 80%;
   min-height:200px;
-  background: #fff;
+  background: #efefef;
   border-radius: 10px;
   padding:10px 25px;
   margin:10px 0;
