--- a/app/views/footer.jade
+++ b/app/views/footer.jade
@@ -1,4 +1,4 @@
 .footer
-  | &copy; 2011
-  a(href='index.html') MAC Lab
+  | &copy; 2013&nbsp;&nbsp;
+  a(href='http://mac.citi.sinica.edu.tw') MAC Lab
 
