--- a/app/views/publication.jade
+++ b/app/views/publication.jade
@@ -3,7 +3,7 @@
     h1
       | Book
     ul.list-group
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -18,7 +18,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | This book provides a comprehensive introduction of the research on modeling
         | human&apos;s emotion perception of music&comma; a research topic that emerges in the face of
         | the ever-increasing amount of digital music content&period; Automatic recognition of the
@@ -35,7 +35,7 @@
     h1
       | Journal Papers
     ul.list-group
-      li.list-group-item
+      li.list-group-item.well
         | C&period;-T&period; Lee&comma;
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
@@ -55,7 +55,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | K&period;-S&period; Lin&comma; A&period; Lee&comma;
         b Y&period;-H&period; Yang
         | &comma; C&period;-T&period; Lee&comma; and H&period;-H&period; Chen&comma;
@@ -72,7 +72,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | Y&period;-C&period; Lin&comma;
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
@@ -94,7 +94,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -115,7 +115,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -138,7 +138,7 @@
         | &rsqb;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -160,7 +160,7 @@
         | &rsqb;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; W&period;-H&period; Hsu&comma; and H&period;-H&period; Chen&comma;
         br
@@ -181,7 +181,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | Y&period;-F&period; Su&comma;
         b Y&period;-H&period; Yang
         | &comma; M&period;-T&period; Lu&comma; and H&period;-H&period; Chen&comma;
@@ -202,7 +202,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; Y&period;-F&period; Su&comma; and H&period;-H&period; Chen&comma;
         br
@@ -229,7 +229,7 @@
         | &comma; include dataset&rsqb; &lpar;cited by 50&rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -248,7 +248,7 @@
       | Conference Papers
     h3 2012
     ul.list-group
-      li.list-group-item
+      li.list-group-item.well
         | J&period;-Y&period; Liu&comma; C&period;-C&period; Yeh&comma; Y&period;-C&period; Teng&comma; and Y&period;-H&period; Yang&comma;
         b &OpenCurlyDoubleQuote;Bilingual analysis of song lyrics and audio words
         | &comma;&rdquor;
@@ -260,7 +260,7 @@
             | &rpar;&comma; short paper&comma; 2012&period;
             br
             br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | and X&period; Hu
         br
@@ -277,7 +277,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | C&period;-C&period; Yeh and Y&period;-H&period; Yang&comma;
         br
         | &quot;
@@ -295,7 +295,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; D&period; Bogdanov&comma; P&period; Herrera&comma; and M&period; Sordo&comma;
         br
@@ -313,7 +313,7 @@
         br
     h3 2011
     ul.list-group
-      li.list-group-item
+      li.list-group-item.well
         | Y&period;-H&period; Kuo&comma; H&period;-T&period; Lin&comma; W&period;-H&period; Cheng&comma;
         b Y&period;-H&period; Yang
         | &comma; and W&period;-H&period; Hsu&comma;
@@ -334,7 +334,7 @@
         | &lpar;paper&rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | K&period;-S&period; Lin&comma; A&period; Lee&comma;
         b Y&period;-H&period; Yang
         | &comma; C&period;-D&period; Lee&comma; and H&period;-H&period; Chen&comma;
@@ -354,7 +354,7 @@
         br
         | &lpar;paper&rpar;
         br
-      li.list-group-item
+      li.list-group-item.well
         | C&period;-D&period; Lee&comma;
         b Y&period;-H&period; Yang
         | &comma; and H&period;-H&period; Chen&comma;
@@ -379,7 +379,7 @@
       br
     h3 2010
     ul.list-group
-      li.list-group-item
+      li.list-group-item.well
         | Y&period;-H&period; Kuo&comma; Y&period;-L&period; Wu&comma; K&period;-T&period; Chen&comma;
         b Y&period;-H&period; Yang
         | &comma; T&period;-H&period; Chiu&comma; and W&period;-H&period; Hsu&comma;
@@ -399,7 +399,7 @@
       br
     h3 2009
     ul.list-group
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; A&period; Lee&comma; and H&period;-H&period; Chen&comma;
         br
@@ -421,7 +421,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | M&period;-Y&period; Su&comma;
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
@@ -444,7 +444,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
         br
@@ -462,7 +462,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | L&period;-C&period; Hsieh&comma; K&period;-T&period; Chen&comma;
         b Y&period;-H&period; Yang
         | &comma; and G&period;-L&period; Wu&comma;
@@ -482,7 +482,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -500,7 +500,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | and H&period;-H&period; Chen&comma;
         br
@@ -521,7 +521,7 @@
         | &lsqb;project page&comma; include dataset&rsqb;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | Y&period;-C&period; Lin&comma;
         b Y&period;-H&period; Yang
         | &comma; H&period;-H&period; Chen&comma; I-Bin Liao&comma; and Yeh-Chin Ho
@@ -543,7 +543,7 @@
         | &comma; include dataset&rsqb;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
         br
@@ -561,7 +561,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | H&period;-T&period; Cheng&comma;
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
@@ -586,7 +586,7 @@
         br
     h3 2008
     ul.list-group
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; P&period;-T&period; Wu&comma; C&period;-W&period; Lee&comma; K&period;-H&period; Lin&comma; W&period;-H&period; Hsu&comma; and H&period;-H&period; Chen&comma;
         br
@@ -613,7 +613,7 @@
         | &comma; include dataset&rsqb;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | P&period;-T&period; Wu&comma;
         b Y&period;-H&period; Yang
         | &comma; K&period;-T&period; Chen&comma; W&period;-H&period; Hsu&comma; T&period;-H&period; Li&comma; and C&period;-J&period; Lee&comma;
@@ -632,7 +632,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; H&period;-T&period; Cheng&comma; and H&period;-H&period; Chen&comma;
         br
@@ -652,7 +652,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | T&period;-L&period; Wu et al&comma;
         br
         | &quot;
@@ -670,7 +670,7 @@
         | &comma; demo&rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; H&period;-T&period; Cheng&comma; I&period;-B&period; Liao&comma; Yeh-Chin Ho&comma; and H&period;-H&period; Chen&comma;
         br
@@ -690,7 +690,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | H&period;-T&period; Cheng&comma;
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; I&period;-B&period; Liao&comma; and H&period;-H&period; Chen&comma;
@@ -709,7 +709,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | and W&period;-H&period; Hsu&comma;
         br
@@ -729,7 +729,7 @@
         br
     h3 2007
     ul.list-group
-      li.list-group-item
+      li.list-group-item.well
         | M&period;-F&period; Weng&comma; C&period;-K&period; Chen&comma;
         b Y&period;-H&period; Yang
         | &comma; R&period;-E&period; Fan&comma; Y&period;-T&period; Hsieh&comma; Y&period;-Y&period; Chunag&comma; W&period;-H&period; Hsu&comma; and C&period;-J&period; Lin&comma;
@@ -752,7 +752,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | C&period;-C&period; Ma&comma;
         b Y&period;-H&period; Yang
         | &comma; and W&period; Hsu&comma;
@@ -773,7 +773,7 @@
         | &comma; include dataset&rsqb;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; Y&period;-F&period; Su&comma; Y&period;-C&period; Lin&comma; and H&period;-H&period; Chen&comma;
         br
@@ -801,7 +801,7 @@
           | &rpar;&rsqb;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; Y&period;-C&period; Lin&comma; Y&period;-F&period; Su&comma; and H&period;-H&period; Chen&comma;
         br
@@ -829,7 +829,7 @@
         br
     h3 2006
     ul.list-group
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; C&period;-C Liu&comma; and H&period;-H&period; Chen&comma;
         br
@@ -853,7 +853,7 @@
           | &rsqb;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         | C&period;-C Liu&comma;
         b Y&period;-H&period; Yang
         | &comma; P&period;-H&period; Wu&comma; and H&period;-H&period; Chen&comma;
@@ -874,7 +874,7 @@
         | &rpar;
         br
         br
-      li.list-group-item
+      li.list-group-item.well
         b Y&period;-H&period; Yang
         | &comma; M&period;-T Lu&comma; and H&period;-H&period; Chen&comma;
         br
