--- a/app/views/research.jade
+++ b/app/views/research.jade
@@ -18,14 +18,14 @@
           | Emotion-based music retrieval has been considered as a prominent way of music information access in the digital era&comma; as music is often created to convey emotion&period; This project aims at building a practical emotion classification system using large-scale data sets and a fine-grained level of emotion description&period;  Specifically&comma; we are interested in exploiting the rich repository of online tags to create a classification system that discriminates up to hundreds of emotions&comma; just in corresponding to the richness of emotion perception we have while listening to music&period; This project would involve various machine learning techniques such as multi-label classification&comma; cost-sensitive learning&comma; multiple instance learning&comma; and structured learning&period;
       li.media
         a.pull-left
-          img.media-object.img-thumbnail(src='./images/emoRecom.jpg', height='320', width='320')
+          img.media-object.img-thumbnail(src='./images/emoRecom.png', height='320', width='320')
         div.media-body
           h4.media-heading
             | Context-aware music recommendation on mobile devices
           | This project aims at understanding the interplay between listening context&comma; listening mood&comma; and music content&period; Specifically&comma; the envisioned system is a user-centered system which learns to recommend music to a specific user according to day-to-day interaction with the user&period; We are interested in modeling the user&rsquor;s listening behavior according to listening profile&comma; but also interpreting the momentary listening context &lpar;time&comma; location&comma; activity&rpar; and listening mood &lpar;via face&comma; sound&comma; or physiological signals&rpar; by multimodal sensors&comma; especially those deployed on mobile devices&period; This multidisciplinary-natured research would place more emphasis on user modeling&period;
       li.media
         a.pull-left
-          img.media-object.img-thumbnail(src='./images/sparseRepre.jpg', height='320', width='320')
+          img.media-object.img-thumbnail(src='./images/sparseRepre.png', height='320', width='320')
         div.media-body
           h4.media-heading
             | Sparse representation of music signals and source separation
