--- a/app/views/footer.jade
+++ b/app/views/footer.jade
@@ -1,4 +1,21 @@
 .footer
-  | &copy; 2013&nbsp;&nbsp;
-  a(href='http://mac.citi.sinica.edu.tw') MAC Lab
-
+  div.row
+    ul.list-inline.copyright.col-md-6.col-xs-12
+      li
+        i.fa.fa-music.fa-3x
+      li
+        div.copyright-text.text-left
+          strong
+            | Copyright © 2014
+            a(href='http://mac.citi.sinica.edu.tw')  MACLab
+          div.crumb.text-left.muted
+            | Based on work at subtlepatterns.com.
+    ul.links.list-inline.col-md-6.visible-desktop.addthis_toolbox.addthis_default_style.addthis_16x16_style
+        li
+          a.addthis_button_email
+        li
+          a.addthis_button_facebook
+        li
+          a.addthis_button_google_plusone_share
+        li
+          a.addthis_button_twitter
