--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,6 +5,7 @@ body {
   line-height: 2.5em;
   letter-spacing: 0.07em;
   text-align: justify;
+  font-family: "proxima-nova-1", "proxima-nova-2", "Helvetica Neue", Arial, "Hiragino Kaku Gothic Pro", "Hiragino Sans GB", "Lantinghei TC", "Lantinghei SC", sans-serif;
 }
 
 .full-width-image-1 {
@@ -43,10 +44,6 @@ body {
 	margin: 30px 0;
 }
 
-footer {
-	margin: 50px 0;
-}
-
 @media (max-width: 768px) {
 
   .section-heading {
@@ -66,7 +63,6 @@ body .container .content{
 }
 
 body h1{
-  font: 400 50px/1.2 'Allerta', sans-serif;
   text-shadow: 3px 3px 3px #fff;
 }
 
@@ -90,20 +86,28 @@ b{
   font-size:17px;
   line-height: 1.7em;
 }
-body .footer{
+
+body .footer {
   width:100%;
-  height: 100%;
+  height: 100px;
   /*background: #fff;*/
   background-image: url(../images/dark_wood.png);
   padding:10px;
   margin-top: 5px;
   text-align: center;
   font-size:12px;
+  color: #d3d3d3;
+  vertical-align: baseline;
+}
+body .footer .row {
+  margin-top: 25px;
+}
+body .footer .crumb{
   color: #999;
 }
 
 body .footer a{
-  color: #999;
+  color: #d3d3d3;
   text-decoration: none;
 }
 
@@ -113,4 +117,8 @@ body .footer a:hover{
 
 body .navbar {
   background-image: url(../images/dark_wood.png);
+}
+.centering{
+  float:none;
+  margin:0 auto
 }
