--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -4,15 +4,28 @@
       font(color='brown') Music and Audio Computing Lab
 body
   div.jumbotron
-        font(color='brown') Music and Audio Computing Lab
-        .content-separator
-        | The Music and Audio computing (MAC) Lab of the Academia Sinica in Taipei&comma; part of its Research Center for Information Technology Innovation&comma;
-        | was founded in Sept&period; 2011 by Dr&period; Yi&comma;Hsuan Yang&period; The MAC Lab is dedicated to the development of multimedia systems that better understand what
-        | we hear and perceive in sounds and apply this understanding to enhance our interaction with sounds&period; Our goal is to carry out highly original
-        | and competitive research at the international level and transfer the technology to impact the daily life&period;
-        div &NonBreakingSpace;
-        | Our current research interests include&comma; but are not limited to&colon; music emotion recognition&comma; automatic tagging&comma; music recommendation&comma; multi-pitch
-        | estimation&comma; lyrics processing&comma; auditory scene analysis&comma; audio event detection&comma; singer&sol;speaker identification&comma; audio fingerprinting&comma; human affect
-        | detection&comma; and user interface design for mobile devices&period;
-        div &NonBreakingSpace;
-        div &NonBreakingSpace;
+    font(color='brown') Music and Audio Computing Lab
+    .content-separator
+    |The Music and Audio Computing (MAC) Lab was founded in Sept. 2011 by Dr. Yi,Hsuan Yang.
+    |The MAC Lab is dedicated to the development of multimedia systems that better understand
+    | what we hear and perceive in sounds and apply this understanding to enhance our
+    | interaction with sounds. Our goal is to carry out highly original and competitive
+    |research at the international level and transfer the technology to impact the daily life.
+    div &NonBreakingSpace;
+    | Our current research interests include the follows:
+    li sparse coding based music signal processing
+    li melody transcription
+    li source separation
+    li music emotion recognition
+    li context-aware music recommendation
+    li multimedia systems for mobile devices
+    li social media analysis and mining
+    div &NonBreakingSpace;
+    div &NonBreakingSpace;
+
+  div.jumbotron
+    font(color='brown') News
+    .content-separator
+    li We are organizing ISMIR 2014 at Taipei, Taiwan! (link)
+    li We are organizing a special issue on Affective Analysis in Multimedia in IEEE Transactions on Affective Computing!
+    li We are recruiting!
