--- a/app/index.jade
+++ b/app/index.jade
@@ -60,4 +60,6 @@ html.no-js
     // build:js({.tmp,app}) scripts/scripts.js
     script(src='scripts/app.js')
     script(src='scripts/controllers/main.js')
+    script(src='scripts/services/publication.js')
+    script(src='scripts/services/ppl.js')
     // endbuild
