add bootsrap callout style

--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -26,6 +26,11 @@ body
   div.jumbotron
     font(color='brown') News
     .content-separator
-    li We are organizing ISMIR 2014 at Taipei, Taiwan! (link)
-    li We are organizing a special issue on Affective Analysis in Multimedia in IEEE Transactions on Affective Computing!
-    li We are recruiting!
+    .bs-callout.bs-callout-warning
+      | We are organizing ISMIR 2014 at Taipei, Taiwan! (
+      a(href='http://www.terasoft.com.tw/conf/ismir2014//') link
+      |)
+    .bs-callout.bs-callout-warning
+      | We are organizing a special issue on Affective Analysis in Multimedia in IEEE Transactions on Affective Computing!
+    .bs-callout.bs-callout-warning
+      | We are recruiting!
